.argocd-state/shlink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink
spec:
  selector:
    app: shlink
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: shlink-web-client
spec:
  selector:
    app: shlink-web-client
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
